settings: add build user to about phone
Change-Id: I4dce5a4bf2937179676b1d236e4cb9725d2ce9dc

--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -171,6 +171,14 @@
         android:summary="@string/summary_placeholder"
         settings:allowDividerAbove="true"/>
 
+    <!-- Build user -->
+    <Preference
+        android:key="build_user"
+        android:order="44"
+        android:title="@string/build_user"
+        android:summary="@string/build_username"
+        settings:allowDividerAbove="true"/>
+
     <!-- SELinux status information -->
     <Preference
         android:key="selinux_status"
