--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -136,4 +136,12 @@
         android:summary="@string/summary_placeholder"
         settings:allowDividerAbove="true"/>
 
+    <!-- Build user -->
+    <Preference
+        android:key="build_user"
+        android:order="44"
+        android:title="@string/build_user"
+        android:summary="@string/build_username"
+        settings:allowDividerAbove="true"/>
+
 </PreferenceScreen>
